--- a/music-player/Cargo.toml
+++ b/music-player/Cargo.toml
@@ -17,6 +17,8 @@ chrono = "0.4.41"
 reqwest = "0.12.20"
 image = "0.25.6"
 bytes = "1.10.1"
+toml = "0.8"
+cosmic-config = { git = "https://github.com/pop-os/libcosmic.git", rev = "52b802a" }
 
 [dependencies.libcosmic]
 git = "https://github.com/pop-os/libcosmic.git"
